adding singup feature

--- a/12-Backend-App/src/views/author.ejs
+++ b/12-Backend-App/src/views/author.ejs
@@ -10,11 +10,9 @@
 </head>
 <body>
         <%- include nav.ejs %>
-        <li>   
-            
-            <h4> TITLE : <%=book.title%></a> </h4>
-            <p>  DESCRIPTION : <%=book.description%> </p>
-            <h5>  AUTHOR : <%=book.author%>  </h5>
+        <li> 
+            <h4> TITLE : <%= author.title %></a> </h4>
+            <p>  DESCRIPTION : <%=author.description %> </p>
         </li>
     
 </body>
