--- a/12-Backend-App/src/views/books.ejs
+++ b/12-Backend-App/src/views/books.ejs
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <%- include nav.ejs %>
     <%books.forEach(function(book){%>
         <li>
             <h4> TITLE :  <a href="books/<%=book.id%>"> <%=book.title%></a> </h4>
