--- a/12-Backend-App/src/views/home.ejs
+++ b/12-Backend-App/src/views/home.ejs
@@ -8,9 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <ul>
-        <li><a href="/books">books</a></li>
-        <li><a href="/authors">authors</a></li>
-    </ul>
+        <%- include nav.ejs %>
+        <%= message || null %>
+        <form action="/authenticate" method="POST">
+            <h3>sign-up</h3>
+            <label for="">username: </label><input name="username" type="text"><br>
+            <label for="">password: </label><input name="password" type="text"><br>
+            <input type="submit" value="submit">
+        </form>
 </body>
 </html>
