--- a/12-Backend-App/src/views/home.ejs
+++ b/12-Backend-App/src/views/home.ejs
@@ -10,11 +10,25 @@
 <body>
         <%- include nav.ejs %>
         <%= message || null %>
-        <form action="/authenticate" method="POST">
+        <form action="/authenticate/signup" method="POST">
             <h3>sign-up</h3>
             <label for="">username: </label><input name="username" type="text"><br>
             <label for="">password: </label><input name="password" type="text"><br>
             <input type="submit" value="submit">
+        </form>
+
+        <hr>
+
+        <form action="/authenticate/signin" method="POST">
+            <h3>sign-in</h3>
+            <label for="">username: </label><input name="username" type="text"><br>
+            <label for="">password: </label><input name="password" type="text"><br>
+            <input type="submit" value="submit">
+        </form>
+
+        <hr>
+        <form action="/authenticate/logout" method="POST">
+            <input type="submit" value="logout">
         </form>
 </body>
 </html>
