--- a/12-Backend-App/src/views/unauthorized.ejs
+++ b/12-Backend-App/src/views/unauthorized.ejs
@@ -6,18 +6,10 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
-
 <body>
         <%- include nav.ejs %>
-    <%authors.forEach(function(author){%>
-        <li>
-            <h4> TITLE :  <a href="authors/<%=author.id%>"> <%=author.title%></a> </h4>
-            <p>  DESCRIPTION : <%=author.description%> </p>
-        </li>
-    <%})%>
-    <hr>
+        <%= message || null %>
+        <h1>Access Denied</h1>
 </body>
-
 </html>
