adding goodreads service

--- a/12-Backend-App/kalam/src/views/book.ejs
+++ b/12-Backend-App/kalam/src/views/book.ejs
@@ -15,6 +15,7 @@
             <h4> TITLE : <%=book.title%></a> </h4>
             <p>  DESCRIPTION : <%=book.description%> </p>
             <h5>  AUTHOR : <%=book.author%>  </h5>
+            <p><%-review %></p>
         </li>
     
 </body>
