adding search functionality

--- a/12-Backend-App/kalam/src/views/book.ejs
+++ b/12-Backend-App/kalam/src/views/book.ejs
@@ -8,8 +8,11 @@
         <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
         <!-- <script src="main.js"></script> -->
 </head>
-<body>
+<body>  
+
         <%- include nav.ejs %>
+        <%- include search.ejs %>
+        
         <li>   
             
             <h4> TITLE : <%=book.title%></a> </h4>
